File Name: CHANGES

03/28/2013 FASP 1.2.5:
- Update MUMPS support.
- Revise cmake to support cmake version 2.6.
- Fix bugs in block AMG.
- Update Intel compiler version to 2013.2.149 for VS2008 solution.
- Add initial step print out for PCG.
- Prepare PCG for adding safe-guard.

02/28/2013 FASP 1.2.4:
- Add a TCL GUI for installing FASP.
- Add TCL GUI support for UMFPACK.
- Add a cmake module for finding SparseSuite (UMFPACK).
- Fix a bug in test.c calling UMFPACK.
- Divide calling to MUMPS in three steps to improve efficiency.
- Change VS2008 setting to accomodate changes in MUMPS 4.10.0.
- Update FASP homepage.

02/27/2013 FASP 1.2.3:
- Add an intial version of cmake.
- Remove the origianl make and scons.
- Update online documention, README, etc according to cmake.
- Update cmake with several options: shared, openmp, verbose, etc.
- Add interface to MUMPS.
- Update interface function names.
- Change preprocessor: "WITH_DISOLVE" -> "WITH_MUMPS".
- Update VS08 solution for the new direct solver interface. 

02/23/2013 FASP 1.2.2:
- Prepare to switch from make to cmake.
- Add check for NAN.
- Add a safe-net for coarse level iterative solver.
- Remove non-standard examples from test.c.
- Fix and test DEBUG build in VS08.

02/21/2013 FASP 1.2.1:
- Add monolithic AMG for system of PDEs.
- Fix a bug in the Makefile inside the "test/" dir.
- Modify push2sf.sh.
- Change smoother names: GS -> SMOOTHER_GS, etc.
- Modify coarse level solver definition according to a bug report for fasp4blkoil.
- Change preprocessor: "With_DISOLVE" -> "WITH_DISOLVE", etc to be consistent with VS08.
- Some small changes with variable names.
- Remove some unnecessary parts in Makefile.
- Add a top level Makefile for cleanup and backup.

02/02/2013 FASP 1.2.0:
- Fix the bug in Windows: MINRES wrong in release version; remove /ffast option.
- Revise Makefile's.
- Update Documentation.
- Available online now.
- A public version is available online at fasp.sf.net.
- Update the webpage.
